# AutoPassWifi

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py  main.py
src/core/: authenticator.py  connection_monitor.py  connection_monitor_linux.py  connection_monitor_macos.py  connection_monitor_win.py  health_checker.py  portal_detector.py  sys_network.py
src/providers/: base.py  clickthrough.py  registry.py
src/tray/: tray_app.py
src/utils/: autostart.py  config.py  netsh_helper.py  paths.py  portal_profile_store.py  session_tracker.py  updater.py
tests/: conftest.py  test_autostart.py  test_clickthrough.py  test_connection_monitor_linux.py  test_connection_monitor_macos.py  test_portal_detector.py  test_portal_profile_store.py  test_session_tracker.py  test_sys_network.py  test_updater.py
