[project]
name = "autopasswifi"
version = "1.1.1"
description = "Auto-login service for captive portal Wi-Fi networks"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.50.0",
    "httpx>=0.28.0",
    "loguru>=0.7.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "keyring>=24.3.0",
    "playwright-stealth>=1.0.6",
]
